# genro-orm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
genro_orm/: __init__.py
gtext_src/: architecture.md.gtext  overview.md.gtext  subproject_hdr.md
tests/: __init__.py
